--- a/reactNew/package.json
+++ b/reactNew/package.json
@@ -14,9 +14,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^30.0.6",
     "apexcharts": "^3.23.1",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "chance": "^1.1.9",
+    "devextreme": "^23.1.4",
+    "devextreme-react": "^23.1.4",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
